--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,4 @@
 RewriteEngine on
-RewriteRule !\.(js|gif|jpg|png|css)$ index.php
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule . index.php [L]
