--- a/composer.json
+++ b/composer.json
@@ -4,3 +4,20 @@
         "lusito/notorm": "dev-master"
     }
 }
+{
+	"name": "vrana/notorm",
+	"description": "NotORM is a PHP library for simple working with data in the database.",
+	"keywords": ["database", "dbal"],
+	"homepage": "http://www.notorm.com/",
+	"license": ["Apache-2.0", "GPL-2.0+"],
+	"authors": [
+		{
+			"name": "Jakub Vrána",
+			"homepage": "http://www.vrana.cz/"
+		}
+	],
+	"autoload": {
+		"files": ["NotORM.php"]
+	}
+}
+
